# CAIP

./: README.md  pyproject.toml
apps/analysis/: models.py  tests.py
apps/analysis/migrations/: 0001_initial.py  0002_analysisjob_error_message_analysisjob_metadata.py
apps/artifacts/: apps.py  models.py  serializers.py  urls.py  views.py
apps/artifacts/migrations/: 0001_initial.py  0002_extend_project_artifact.py
apps/authentication/: authentication.py  models.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/github/: apps.py  models.py  urls.py  views.py
apps/github/migrations/: 0001_initial.py
apps/knowledge/: ARCHITECTURE.md  apps.py  models.py  serializers.py  urls.py  views.py
apps/knowledge/migrations/: 0001_initial.py  0002_knowledgeitem_analysis_job_and_more.py  0003_alter_knowledgeitem_discovered_by_and_more.py
apps/projects/: models.py  serializers.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_project_availability_project_business_context_and_more.py  0003_project_repository_data.py
apps/repositories/: models.py  serializers.py  views.py
apps/repositories/migrations/: 0001_initial.py
apps/results/: models.py
apps/results/migrations/: 0001_initial.py
core/: settings.py  urls.py
services/: project_knowledge.py  repository_classifier.py  repository_scanner.py
