[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
    "dj-database-url>=3.1.2",
    "django>=5.2.15",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "gitpython>=3.1.50",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "supabase>=2.31.0",
]
